# Citation-Cross-Checker

./: BUILD_MAC_APP.md  BUILD_WINDOWS_EXE.md  Citation-Cross-Checker.spec  ENDNOTES_VERIFICATION.md  GUI_USER_GUIDE.md  LICENSE  QUICKSTART.md  README.md  diagnose.py  diagnose_endnotes.py  launch_gui.bat  launch_gui.py  launch_gui.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
examples/: manuscript_with_issues.txt  sample_manuscript.txt
src/citation_cross_checker/: __init__.py  checker.py  cli.py  document_reader.py  formatters.py  gui.py  models.py  parsers.py
tests/: __init__.py  test_author_parsing.py  test_checker.py  test_deduplication_and_styles.py  test_document_reader.py  test_parsers.py  test_year_mismatch.py
